# SapphireLibs

./: .gitignore  CMakeLists.txt
cmake/: FindBoost.cmake  compiler.cmake
sapphire/: CMakeLists.txt
sapphire/datReader/: CMakeLists.txt  Dat.cpp  Exd.cpp  ExdCat.cpp  ExdCat.h  ExdData.cpp  GameData.cpp  GameData.h  crc32.cpp  zlib.cpp
sapphire/mysqlConnector/: CMakeLists.txt  Connection.cpp  Connection.h  PreparedResultSet.cpp  PreparedResultSet.h  PreparedStatement.cpp  PreparedStatement.h  ResultBind.cpp  ResultSet.cpp  Statement.cpp  mysql_util.cpp  mysql_util.h
